--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1198,19 +1198,28 @@ We have defined our quicksort template, proved it terminating and derived the fu
 
 We started our development by giving a specification. This is reminiscent of test-driven development, except that tests are replaced by formal proofs. Such an approach has been dubbed \textit{proof-driven development} \cite{ProofDriven}, but we don't attach any emotional value to this label.
 
-A much more important tenet of our approach could be called \textit{hole-driven development}.\footnote{Sadly, there is no solid literature on the topic, mostly just blog posts that introduce the idea.} The idea here is that we construct programs in stages, by refining earlier, incomplete versions of the program. Each missing piece of the program is marked with an hole and refining an incomplete program is done by filling (i.e. replacing) the hole with a program of the appropriate type, which can also possibly be incomplete and contain further holes. This process is iterated until we reach a complete program.
+A much more important tenet of our approach could be called \textit{hole-driven development}.\footnote{Sadly, there is no solid literature on the topic, mostly just blog posts that introduce the idea.} The idea here is that we construct programs in stages, by refining earlier, incomplete versions of the program. Each missing piece of the program is marked with a hole and refining an incomplete program is done by filling (i.e. replacing) the hole with a program of the appropriate type, which can also possibly be incomplete and contain further holes. This process is iterated until we reach a complete program.
 
-The most well-known languages that support holes are Agda, Idris and Haskell \cite{TypedHoles}. In Idris, a hole looks like \m{?h :\ A}, where \m{h} is the name of the hole and \m{A} is its type -- holes are intrinsically typed, just like all other terms in the language. Coq, sadly, does not support holes. The closest equivalent of holes in Coq are \textit{existential variables} \cite{ExistentialVariables}. When we combine them with tactic-based definitions\footnote{These are programs defined between \m{Proof.} and \m{Defined.} using ordinary tactics.} using the tactic \m{refine}, we got something that vaguely resembles the hole-driven development available in Idris.
+The most well-known languages that support holes are Agda, Idris and Haskell \cite{TypedHoles}. In Idris, a hole looks like \m{?h :\ A}, where \m{h} is the name of the hole and \m{A} is its type -- holes are intrinsically typed, just like all other terms in the language. Coq, sadly, does not support holes, but it supports \textit{existential variables} \cite{ExistentialVariables} which are somewhat similar. When we combine existential variables with tactic-based definitions\footnote{Coq's tactics are not just for proving! Because they are just a different way of constructing terms, they can be used for defining programs too (we only need to remember to close such definitions with \m{Defined} instead of \m{Qed}).} using the tactic \m{refine}, we got something that vaguely resembles the hole-driven development available in Idris.
 
-But wait! What we did when defining the quicksort template looked nothing like the hole-driven development approach that we just described. That's right, and for two separate reasons. First, we used holes quite implicitly, because quicksort is too easy an algorithm to pose serious problems when defining it. Second and more importantly, we filled our implicit holes with subprograms that we abstracted over and put into \m{QSArgs}, effectively postponing the hole-filling until the time when a user actually wants to run the algorithm.
+But wait! What we did when defining the quicksort template looked nothing like the hole-driven development approach that we just described. That's right, and for two separate reasons. First, we used holes quite implicitly, because quicksort is too easy an algorithm to pose serious problems when defining it. Second and more importantly, we filled our implicit holes with subprograms that we abstracted over (by putting them into the definition of \m{QSArgs)}, effectively postponing the hole-filling until the time when a user actually wants to run the algorithm.
 
-What we did when defining the terminating quicksort template also didn't look like hole-driven development as described above, but it was. Recall that in section \ref{wellfounded}, after having defined the domain predicate, we tried to prove by well-founded induction that all lists belong to the domain, but we failed. The reason of our failure was that some termination-related properties of our subprograms were lacking and thus our proof had some gaps.\footnote{Curiously, mathematicians tend to use the word ``gap'' for a missing part of a proof. This is very similar to our use of ``hole'' for a missing part of a program. But there's also a significant difference between gaps and holes: in the mathematical world, gaps arise from mistakes and errors, whereas holes in programs come into existence by being deliberately put there.} We then assumed that the desired properties indeed hold by defining \m{TerminatingQSArgs}, and filled the gaps with proofs coming from there.
+What we did when defining the terminating quicksort template also didn't look like hole-driven development as described above, but it was. Recall that in section \ref{wellfounded}, after having defined the domain predicate, we unsuccessully tried to prove by well-founded induction that all lists belong to the domain. The reason of our failure was that some termination-related properties of our subprograms were lacking and thus our proof had a few gaps.\footnote{Interestingly, mathematicians tend to use the word ``gap'' for a missing part of a proof. This is very similar to our use of ``hole'' for a missing part of a program. But there's also a significant difference between gaps and holes: in the mathematical world, gaps arise from mistakes and errors, whereas holes in programs come into existence by being deliberately put there.} We then assumed that the desired properties indeed hold (by putting them into the definition of \m{TerminatingQSArgs}), and used them to fill the gaps in our proof.
 
-We see that our approach, based on filling holes with things we abstract over, is very powerful and lends itself well to both writing programs and proving theorems. But we don't need to treat all holes this way -- we can still, of course, fill holes with concrete terms, like in the traditional hole-driven development. This is indeed how we will prove our quicksort correct: we will reason by functional induction and use the tactic \m{admit} for any parts of the theorems that we can't prove. Then we will step back and try to turn these \m{admit}ted gaps into lemmas. When it's clear we couldn't possibly prove some lemma, we will simply assume that it holds by adding it into \m{VerifiedQSArgs}, the last incarnation of \m{QSArgs} which allows the correctness proof to go through.
+We see that our approach, based on filling holes with things we abstract over,\footnote{It's tempting to call this technique \textit{hole abstraction} or \textit{abstraction over holes}.} is very powerful and lends itself well to both writing programs and proving theorems. But we don't need to treat all holes this way -- we can still, of course, fill holes with concrete terms, like in the traditional hole-driven development. This is indeed how we will prove our quicksort correct: we will reason by functional induction and use the tactic \m{admit} for any parts of the theorems that we can't prove right away. Then we will step back and try to turn these \m{admit}ted gaps into lemmas. When it's clear we couldn't possibly prove some lemma, we will simply assume that it holds (by putting it into the definition of \m{VerifiedQSArgs}, the last incarnation of \m{QSArgs} which allows the correctness proof to go through) and use this assumption to fill the gap in the main proof.
 
-Before we finish our deliberations, we should also mention the idea of \textit{type-driven development} \cite{TypeDriven}, sometimes also called \textit{type-first development} \cite{TypeFirst} or \textit{typeful programming} \cite{Typeful}.
+\begin{center}
+    \textbf{Formally verified algorithm concept/technique \#4.2} \\
+    When proving correctness of the algorithm (or when proving anything, really), use the tactic \m{admit} for any subgoals that you can't immediately prove. After you finish the proof, go back and turn these \m{admit}ted subgoals into lemmas or, when they are not provable, into additional assumptions of your proof.
+\end{center}
 
+Before we finish our deliberations, we should also mention the idea of \textit{type-driven development} \cite{TypeDriven}, sometimes also called \textit{type-first development} \cite{TypeFirst} or \textit{typeful programming} \cite{Typeful}. Type-driven development is, as the name suggests, a way of using the type system to guide the programmer towards an implementation of the desired program. It can be contrasted with the usual way of utilizing the type system, in which the programmer writes the program first and only after finishing he asks the typechecker to help him find errors in the program.
 
+Type-driven development is usually realised by a kind of interaction between the programmer and his language's tooling, where the programmer talks to the system by writing types and programs fragments, and the system responds by synthesizing obvious programs that fit the given type (which is reminiscent of Coq's proof automation), refining the program (e.g. performing case splits) or providing the programmer with suggestions when there are more possible implementations, and typechecking the program fragments provided by the user.\footnote{A powerful type system (i.e. at least dependent types) is pretty much required for the typechecking to fit nicely into this process.}
+
+Type-driven development is championed by Idris and described in the book \cite{TypeDriven} by the language's creator, Edwin Brady. In Coq we can also use this approach as described above, at least as long as we stay in the proof mode. But if we squint a bit, we can see that what we did when defining the default concrete implementation of our algorithm was quite similar in nature. Indeed, when we are done with the correctness proof, the types of subroutines and their expected termination and correctness properties present in \m{VerifiedQSArgs} will turn out to be great at guiding users of our algorithm template towards defining their own concrete implementations.
+
+As it turns out, hole-driven development, together with the idea of abstracting some holes away, naturally leads to type-driven development. They are intrinsically linked.
 
 \inputminted
 [
