--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1204,16 +1204,16 @@ The most well-known languages that support holes are Agda, Idris and Haskell \ci
 
 But wait! What we did when defining the quicksort template looked nothing like the hole-driven development approach that we just described. That's right, and for two separate reasons. First, we used holes quite implicitly, because quicksort is too easy an algorithm to pose serious problems when defining it. Second and more importantly, we filled our implicit holes with subprograms that we abstracted over (by putting them into the definition of \m{QSArgs)}, effectively postponing the hole-filling until the time when a user actually wants to run the algorithm.
 
-What we did when defining the terminating quicksort template also didn't look like hole-driven development as described above, but it was. Recall that in section \ref{wellfounded}, after having defined the domain predicate, we unsuccessully tried to prove by well-founded induction that all lists belong to the domain. The reason of our failure was that some termination-related properties of our subprograms were lacking and thus our proof had a few gaps.\footnote{Interestingly, mathematicians tend to use the word ``gap'' for a missing part of a proof. This is very similar to our use of ``hole'' for a missing part of a program. But there's also a significant difference between gaps and holes: holes in programs come into existence by being deliberately put there, whereas in the mathematical world, gaps usually arise from mistakes and errors. However, see \cite{Gap1} \cite{Gap2} \cite{Gap3} for more on proof gaps which are intentional or acceptable.} We then assumed that the desired properties indeed hold (by putting them into the definition of \m{TerminatingQSArgs}), and used them to fill the gaps in our proof.
+What we did when defining the terminating quicksort template also didn't look like hole-driven development as described above, but it was. Recall that in section \ref{wellfounded}, after having defined the domain predicate, we unsuccessfully tried to prove by well-founded induction that all lists belong to the domain. The reason of our failure was that some termination-related properties of our subprograms were lacking and thus our proof had a few gaps.\footnote{Interestingly, mathematicians tend to use the word ``gap'' for a missing part of a proof. This is very similar to our use of ``hole'' for a missing part of a program. But there's also a significant difference between gaps and holes: holes in programs come into existence by being deliberately put there, whereas in the mathematical world, gaps usually arise from mistakes and errors. However, see \cite{Gap1} \cite{Gap2} \cite{Gap3} for more on proof gaps which are intentional or acceptable.} We then assumed that the desired properties indeed hold (by putting them into the definition of \m{TerminatingQSArgs}), and used them to fill the gaps in our proof.
 
 \begin{center}
     \textbf{Formally verified algorithm concept/technique \#4.2} \\
-    When proving correctness of the algorithm template (or when proving anything else, really), use the tactics \m{cut} and/or \m{admit} for any subgoals that you can't immediately prove. After you finish the proof, go back and turn these \m{admit}ted subgoals into lemmas or, when they are not provable, into additional assumptions of your proof.
+    When proving correctness of the algorithm template (or when proving anything else, really), use the tactics \m{admit} (and/or) \m{cut}) for any subgoals that you can't immediately prove. After you finish the proof, go back and turn these \m{admit}ted subgoals into lemmas or, when they are not provable, into additional assumptions of your proof.
 \end{center}
 
 We see that our approach, based on filling holes with things we abstract over, is very powerful and lends itself well to both writing programs and proving theorems. But we don't need to treat all holes this way -- we can still, of course, fill holes with concrete terms, like in the traditional hole-driven development. This is indeed how we will prove our quicksort correct, as shown in the above concept/technique: we will reason by functional induction and use the tactic \m{admit} for any parts of the theorems that we can't prove right away. Then we will step back and try to turn these \m{admit}ted gaps into lemmas. When it's clear we couldn't possibly prove some lemma, we will simply assume that it holds (by putting it into the definition of \m{VerifiedQSArgs}, the ultimate incarnation of \m{QSArgs} which allows the correctness proof to go through) and use this assumption to fill the gap in the main proof.
 
-The last thing that remains to be done is to name the above technique for easier reference in the future. It could be called ``verification ex nihilo'', like in the title of this chapter, but Latin names aren't too catchy in computer science. Another possible name would be ``gap-driven development'', referring to gaps we leave in proofs to be filled later, but the technique is more about proof engineering than software development. Therefore, from now on we will refer to this technique as \textit{proof by admission}, after the tactic \m{admit}.\footnote{Proof by admission can also be seen as the formalized counterpart of a very powerful proof technique often used by mathematicians, called \textit{proof by handwaving.}}
+The last thing that remains to be done is to name the above technique for easier reference in the future. It could be called ``verificatio ex nihilo'', like in the title of this chapter, but Latin names aren't too catchy in computer science. Another possible name would be ``gap-driven development'', referring to gaps we leave in proofs to be filled later, but the technique is more about proof engineering than software development. Therefore, from now on we will refer to this technique as \textit{proof by admission}, after the tactic \m{admit}.\footnote{Proof by admission can also be seen as the formalized counterpart of a very powerful proof technique often used by mathematicians, called \textit{proof by handwaving.}}
 
 \inputminted
 [
@@ -1251,7 +1251,9 @@ In the third subgoal, we are left with \m{Sorted R (pivot ::\ eq ++ qsf A gt)}. 
 
 This leaves us with two more subgoals. First, we have to prove \m{Sorted R (pivot ::\ eq)}. It looks quite easy, as all elements of \m{eq} are supposed to be equal to \m{pivot}, but we know neither that nor have we any evidence for the fact that a list in which all elements are equal is sorted. This results in another \m{cut} and two more \m{admit}s. The last subgoal, where we have to show that all elements of \m{qsf A gt} are greater than the \m{pivot}, is completely analogous to what we described two paragraphs above, and so we have to \m{admit} it too.
 
-We are done with the ``proving'' and ready 
+We are now done with the proofs (modulo the gaps) and well-acquainted with proof by admission. The technique can be used not only for algorithm correctness, but for pretty much any kind of proof which is tedious, but not complex. The difference between these two is whether the outline of the proof is known.
+
+Tedious proofs have a known outline -- in our case it was functional induction, but it can also be ordinary induction, coinduction, rewriting, or anything else -- but the details might be gory. Complex proofs, on the other hand, have no known outline -- an example could be the normalization of simply typed lambda calculus. If you don't know how it's usually proved and have to invent the proof yourself, it turns out to be harder than filling some gaps with lemmas and assumptions!
 
 \inputminted
 [
@@ -1262,7 +1264,19 @@ We are done with the ``proving'' and ready
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
+We can now progress to fill the gaps, of which there are two kinds: lemmas to be proved and additional properties to be assumed. Thankfully, they are quite easy to distinguish: in our proofs, uses of the tactic \m{cut} (or, to be more precise, \m{cut} followed by \m{admit}) correspond to lemmas and all other uses of \m{admit} correspond to additional assumptions we need to make (some correspond to more than one assumption).
 
+We will start with the additional assumptions we need, collecting them into a new class called \m{VerifiedQSArgs}. The first field of the class is called \m{T} and has type \m{TerminatingQSArgs}. This is similar to how we defined \m{TerminatingQSArgs} as an extension of \m{QSArgs}. In fact, this is the customary way to simulate inheritance in Coq.
+
+The four fields that follow correspond to the two \m{admit}s from the proof of \m{Permutation\_qsf\_first\_try}. They are evidence for the fact that all components of our algorithm template return permutations of their inputs and thus, when put together, are evidence that the algorithm as a whole also returns a permutation of its input.
+
+Next comes a binary relation \m{R} on (the underlying type of) \m{T}, which is the type of elements that are being sorted. We will need it to even state what we mean when we say that \m{qsf} is a sorting function. It may come as a surprise to you, but we came so far in our formalization without mentioning any kind of order at all! If you are a careful reader, you might have noticed that when we tried to prove \m{Sorted\_qsf\_first\_try}, we actually had to assume that the order relation is given as an assumption.
+
+The next field of \m{VerifiedQSArgs} ensures that this order relation \m{R} is reflexive. This fact doesn't correspond to any of our \m{admit}s, but we would have discovered that it is needed when trying to prove that a list of all elements equal to the pivot is sorted.
+
+The remaining fields correspond to \m{admit}s from the proof of \m{Sorted\_qsf\_first\_try}. The first \m{admit} was used because we didn't know that \m{adhoc} is a sorting function and the remaining ones that did not immediately follow uses of \m{cut} were used because we didn't know what is the relation between the pivot and the outputs of \m{partition}.
+
+which is also a coercion, because we want to be able to use an instance of \m{VerifiedQSArgs} wherever an instance of \m{TerminatingQSArgs} is expected.
 
 
 \inputminted
@@ -1273,6 +1287,7 @@ We are done with the ``proving'' and ready
     lastline=381
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
+
 
 \section{Sanity check -- concrete proofs} \label{sanity3}
 
